Fixed overflow for 'add owner' modal

--- a/src/modules/DataCatalog/components/DataSource/ViewEdit/Edit/ModalAddOwner/style.scss
+++ b/src/modules/DataCatalog/components/DataSource/ViewEdit/Edit/ModalAddOwner/style.scss
@@ -21,10 +21,17 @@
 
 @import 'styles/vars-and-mixins.scss';
 
+$width: 26rem;
 .#{$namespace} {
 
 	&ds-form-add-owner {
-		width: 260px;
+		width: $width;
+
+		@include modal-dropdown-overflow($width);
+
+		.ac-autocomplete__search {
+			top: -4.5rem;
+		}
 	}
 
 }
